--- a/update glb-ci.yml
+++ b/update glb-ci.yml
@@ -44,8 +44,10 @@ for project_dir in os.listdir(projects_directory):
                 new_block_content = yaml.safe_load(content_to_add)[block]
                 existing_block = ci_content.get(block, OrderedDict())
                 
-                for key, value in new_block_content.items():
-                    existing_block[key] = value
+                # Merge new_block_content into existing_block
+                for item in new_block_content:
+                    if item not in existing_block:
+                        existing_block[item] = new_block_content[item]
                 
                 ci_content[block] = existing_block
 
