--- a/update glb-ci.yml
+++ b/update glb-ci.yml
@@ -19,9 +19,6 @@ stages:
   - nexusiq-scan
 """
 
-# Define the blocks to update
-blocks_to_update = ['variables', 'stages', 'include']
-
 # Iterate through each project directory
 for project_dir in os.listdir(projects_directory):
     project_path = os.path.join(projects_directory, project_dir)
@@ -29,45 +26,41 @@ for project_dir in os.listdir(projects_directory):
 
     # Check if .gitlab-ci.yml exists in the project directory
     if os.path.isfile(gitlab_ci_file):
-        # Read the existing .gitlab-ci.yml file
         with open(gitlab_ci_file, 'r') as file:
             try:
-                # Read the content of the file
-                lines = file.readlines()
-                # Create an OrderedDict to store the content
-                ci_content = OrderedDict()
-                # Track the blocks that need to be updated
-                blocks_to_update_found = {block: False for block in blocks_to_update}
-                # Track the line numbers where each block starts
-                block_line_numbers = {block: -1 for block in blocks_to_update}
-
-                # Iterate over each line in the file
-                for idx, line in enumerate(lines):
-                    # Check if the line contains any of the blocks to update
-                    for block in blocks_to_update:
-                        if block + ':' in line:
-                            # Mark the block as found
-                            blocks_to_update_found[block] = True
-                            # Store the line number where the block starts
-                            block_line_numbers[block] = idx
-                    # Store the line in the ci_content OrderedDict
-                    ci_content[idx] = line
-
-                # If any block is not found, add it to the end of the file
-                for block, found in blocks_to_update_found.items():
-                    if not found:
-                        # Add the content to add for the block
-                        ci_content[max(ci_content.keys()) + 1] = content_to_add.strip()
-
-            except Exception as e:
-                print(f"Error reading .gitlab-ci.yml file in project {project_dir}: {e}")
+                ci_content = yaml.safe_load(file)
+            except yaml.YAMLError as exc:
+                print(f"Error reading YAML file in project {project_dir}: {exc}")
                 continue
 
-        # Write the updated content back to the .gitlab-ci.yml file
-        with open(gitlab_ci_file, 'w') as file:
-            for line_number in sorted(ci_content.keys()):
-                file.write(ci_content[line_number] + '\n')
-        print(f"Updated .gitlab-ci.yml in project {project_dir}")
+            # Convert to OrderedDict to preserve order
+            ci_content = OrderedDict(ci_content)
 
+            # Check if 'variables' block exists and update it
+            if 'variables' in ci_content:
+                ci_content['variables'].update(yaml.safe_load(content_to_add)['variables'])
+            else:
+                ci_content['variables'] = yaml.safe_load(content_to_add)['variables']
+
+            # Check if 'stages' block exists and update it
+            if 'stages' in ci_content:
+                ci_content['stages'].extend(yaml.safe_load(content_to_add)['stages'])
+            else:
+                ci_content['stages'] = yaml.safe_load(content_to_add)['stages']
+
+            # Check if 'include' block exists and update it
+            if 'include' in ci_content:
+                include_content = ci_content['include']
+                include_content.extend(yaml.safe_load(content_to_add)['include'])
+                # Remove duplicates by converting to set and back to list
+                include_content = list(OrderedDict.fromkeys(include_content))
+                ci_content['include'] = include_content
+            else:
+                ci_content['include'] = yaml.safe_load(content_to_add)['include']
+
+        # Write updated content back to the .gitlab-ci.yml file
+        with open(gitlab_ci_file, 'w') as file:
+            yaml.dump(ci_content, file)
+            print(f"Updated .gitlab-ci.yml in project {project_dir}")
     else:
         print(f".gitlab-ci.yml not found in project {project_dir}")
