--- a/update glb-ci.yml
+++ b/update glb-ci.yml
@@ -54,15 +54,14 @@ for project_dir in os.listdir(projects_directory):
             # Check if 'include' block exists and update it
             if 'include' in ci_content:
                 include_content = ci_content['include']
-                # Check if the include_content is a list
-                if isinstance(include_content, list):
-                    # If it's a list, extend it with the new content
-                    include_content.extend(content_to_add_parsed['include'])
-                else:
-                    # If it's not a list, make it a list and then extend it
+                # Ensure include_content is a list
+                if not isinstance(include_content, list):
                     include_content = [include_content]
-                    include_content.extend(content_to_add_parsed['include'])
-                # Update the 'include' block in ci_content
+                # Extend include_content with new items
+                include_content.extend(content_to_add_parsed['include'])
+                # Remove duplicates
+                include_content = list(OrderedDict.fromkeys(include_content))
+                # Update 'include' block in ci_content
                 ci_content['include'] = include_content
             else:
                 ci_content['include'] = content_to_add_parsed['include']
